--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,35 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+
+ 
+@layer base {
+
+}
+
+@layer base {
+  @font-face {
+    font-family: 'Mona-Sans';
+    font-style: normal;
+    font-weight: 400;
+    font-display: swap;
+    src: url(./fonts/MonaSans-Regular.woff2) format('woff2');
+  }
+}
+
+@font-face {
+  font-family: 'Mona-Sans';
+  font-style: normal;
+  font-weight: 400;
+  font-display: swap;
+  src: url(./fonts/MonaSans-Regular.woff2) format('woff2');
+}
+
+*{
+  font-family: 'Mona-Sans',sans-serif;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
